examples/lb-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-dev
  labels:
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: httpd-dev
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-prod
  labels:
    environment: prod
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: httpd-prod
  ports:
  - port: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: payments
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: payments
  ports:
  - port: 80
---
# Sample Deployments for Services
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-dev
  labels:
    app.kubernetes.io/name: httpd-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpd-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpd-dev
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-prod
  labels:
    app.kubernetes.io/name: httpd-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpd-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpd-prod
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: payments
  labels:
    app.kubernetes.io/name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payments
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payments
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
