examples/allow-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: untitled-policy
spec:
  endpointSelector: {}
