examples/cilium-kind.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-ui
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s-app: hubble-relay
    # allow to dns
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"  # allow queries for al domains
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s-app: hubble-ui
  egress:
    - toEntities:
        - host  # host that is serving the particular endpoint
        - remote-node  # any host in the cluster
    - toEndpoints:
        - matchLabels:
            k8s-app: hubble-ui
    # allow to dns
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"  # allow queries for al domains
